src/test/deca/codegen/valid/sansObjet/unary_minus_2_debug.deca
// Description :
//    Double unary Minus
//
// Resultats :
//    Ok
{
    int a = 3;
    print(-(-a));
}