src/test/deca/codegen/invalid/sansObjet/div_zero.deca
// Description :
//    Division par 0 entier
//
// Resultats :
//    Erreur : divion entiere par zero


{
    int x = 1;
    int y = 0;
    print(x/y);
}
